Implement listing diet and training types
