# backend/adapter/primary/rest-api/src/main/java/pl/lodz/p/it/restapi/mapper/training/TrainingTypeResponseMapper.java
@@ -1,22 +1,24 @@
 package pl.lodz.p.it.restapi.mapper.training;
 
+import static org.mapstruct.NullValuePropertyMappingStrategy.IGNORE;
+
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingTarget;
-import pl.lodz.p.it.restapi.dto.TrainingType;
+import pl.lodz.p.it.core.domain.TrainingType;
+import pl.lodz.p.it.restapi.dto.TrainingTypeResponse;
 import pl.lodz.p.it.restapi.mapper.BaseResponseMapper;
 
-import static org.mapstruct.NullValuePropertyMappingStrategy.IGNORE;
-
 @Mapper(componentModel = "spring", nullValuePropertyMappingStrategy = IGNORE)
-public interface TrainingTypeResponseMapper extends BaseResponseMapper<TrainingType, pl.lodz.p.it.core.domain.TrainingType> {
+public interface TrainingTypeResponseMapper extends
+    BaseResponseMapper<TrainingTypeResponse, TrainingType> {
 
     @Override
     @Mapping(source = "name", target = "title")
-    TrainingType toDtoModel(pl.lodz.p.it.core.domain.TrainingType domainModel);
+    TrainingTypeResponse toDtoModel(TrainingType domainModel);
 
     @Override
     @Mapping(source = "name", target = "title")
-    TrainingType toDtoModel(@MappingTarget TrainingType dtoModel,
-        pl.lodz.p.it.core.domain.TrainingType domainModel);
+    TrainingTypeResponse toDtoModel(@MappingTarget TrainingTypeResponse dtoModel,
+        TrainingType domainModel);
 }
